src/objects/Industry_Table__c.object
<CustomObject>
    <description>Stores 4-digit SIC and Industry Description</description>
    <fields>
        <fullName>Major_Segment__c</fullName>
        <description>Identifies the major segment for each 4 digit SIC (market seg)</description>
        <label>Major Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC__c</fullName>
        <externalId>true</externalId>
        <label>SIC</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <label>Sub Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Digit_Industry_Name__c</fullName>
        <label>2_Digit Industry Name</label>
        <picklist>
            <picklistValues>
                <fullName>02 Agricultural Production - Livestock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07	Agricultural Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08	Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10	Metal Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12	Coal Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13	Oil and Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14	Nonmetallic Minerals, Except Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15	General Building Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16	Heavy Construction, Exc. Building (Water/Sewer/Utilities)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17	Special Trade Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20	Food and Kindred Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21	Tobacco Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22	Textile Mill Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23	Apparel and Other Textile Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24	Lumber and Wood Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25	Furniture and Fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26	Paper and Allied Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27	Printing and Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28	Chemicals and Allied Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29	Petroleum and Coal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30	Rubber and Misc Plastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31	Leather and Leather Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32	Stone, Clay, and Glass Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33	Primary Metal Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34	Fabricated Metal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35	Industrial Machinery and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36	Electronic &amp; Other Electric Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37	Transportation Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38	Instruments and Related Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39	Misc Manufacturing Industries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_Digit_SIC__c</fullName>
        <label>2-Digit SIC</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Industry Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SIC__c</columns>
        <columns>NAME</columns>
        <columns>Major_Segment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Healthcare</fullName>
        <columns>Major_Segment__c</columns>
        <columns>Sub_Segment__c</columns>
        <columns>SIC__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Major_Segment__c</field>
            <operation>equals</operation>
            <value>Healthcare</value>
        </filters>
        <label>Healthcare</label>
    </listViews>
    <nameField>
        <label>Industry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>